[package]
name = "en-os-live-welcome"
version = "0.1.0"
description = "EN-OS Live welcome"
authors = ["Endscape"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.2"

[profile.release]
strip = false
lto = true
panic = "abort"
opt-level = "z"
